# rust-api-course

./: Cargo.toml
migrations/: 20260306052108_create_user_table.sql  20260306152927_create_products_table.sql  20260306161320_create_sells_table.sql
src/: main.rs  utils.rs
src/controllers/: auth.rs  mod.rs  products.rs  sells.rs  users.rs
src/db/: mod.rs  products.rs  sells.rs  users.rs
