[package]
name = "amazon-store"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
bcrypt = "0.19.0"
bigdecimal = "0.4.10"
chrono = "0.4.44"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = {version= "0.8.6", features = ["runtime-tokio", "tls-rustls", "mysql", "chrono", "bigdecimal"]}
tokio = { version = "1.50.0", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
